# amps

./: .gitignore  .travis.yml  CMakeLists.txt  CMakeSettings.json  LICENSE  Readme.md  build  build.sh  config.h.in  copy.bat  test.tpl
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
apache/: Makefile  Readme.md  amps_wrapper.cpp  amps_wrapper.h  errors.tpl  mod_cool_framework.c  modules.mk  my_engine.h  template.tpl  template_xml.tpl
include/: compiler.h  config.h  context.h  engine.h  error.h  fileops.h  metadata.h  object.h  scan.h  stack.h  token.h  types.h  vector_ostream.h
lib/: CMakeLists.txt
sample/: CMakeLists.txt  include.tpl  main.cpp  template.tpl
src/: CMakeLists.txt  compiler.cpp  compiler.h  context.cpp  context.h  engine.cpp  engine.h  error.h  fileops.h  metadata.h  object.h  scan.cpp  scan.h  stack.h  token.cpp  token.h  types.h
test/: CMakeLists.txt  CMakeLists.txt.in  block.1  block.2  block.3  block.4  code.1  code.3  code.4  code.5  code.6  code.for.1  code.for.2  code.for.4  code.for.5  code.for.7  code.for.8  code.for.9  code.if.1  code.if.2  code.insert.1  code.insert.2  code.insert.3  code.insert.4  code.insert.5  code.insert.6  code.insert.cycle1  code.insert.insert  code.insert.recursive1  code.insert.result  code.insert.result456  code.print.1  code.size.1  main.cpp  mock_error.h  test_compiler.h  test_scan.h
